sys/c-include/quickjs/quickjs.h

typedef struct JSRuntime JSRuntime;
typedef struct JSContext JSContext;
typedef uint32_t JSAtom;
typedef struct __JSValue* JSValue;
typedef const struct __JSValue* JSValueConst;
typedef uint64_t JSValue;
typedef union JSValueUnion {
  int32_t int32;
  double float64;
  void* ptr;
} JSValueUnion;
typedef struct JSValue {
  JSValueUnion u;
  int64_t tag;
} JSValue;
typedef JSValue JSCFunction(JSContext *ctx, JSValueConst this_val, int argc, JSValueConst *argv);
typedef JSValue JSCFunctionData(JSContext *ctx, JSValueConst this_val, int argc, JSValueConst *argv, int magic, JSValue *func_data);
enum {
  __JS_ATOM_NULL = JS_ATOM_NULL,
#define DEF(name, str) JS_ATOM_ ## name,
#include "quickjs/quickjs-atom.h"
#undef DEF
  JS_ATOM_END,
};
typedef void JSHostPromiseRejectionTracker(JSContext* ctx, JSValueConst promise, JSValueConst reason, JS_BOOL is_handled, void* opaque);
void JS_SetHostPromiseRejectionTracker(JSRuntime *rt, JSHostPromiseRejectionTracker *cb, void *opaque);
typedef int JSInterruptHandler(JSRuntime *rt, void *opaque);
void JS_SetInterruptHandler(JSRuntime *rt, JSInterruptHandler *cb, void *opaque);
void JS_SetCanBlock(JSRuntime *rt, JS_BOOL can_block);
void JS_SetIsHTMLDDA(JSContext *ctx, JSValueConst obj);
typedef struct JSModuleDef JSModuleDef;
typedef char* JSModuleNormalizeFunc(JSContext* ctx, const char* module_base_name, const char* module_name, void* opaque);
typedef JSModuleDef* JSModuleLoaderFunc(JSContext* ctx, const char* module_name, void* opaque);
void JS_SetModuleLoaderFunc(JSRuntime* rt, JSModuleNormalizeFunc* module_normalize, JSModuleLoaderFunc* module_loader, void* opaque);
JSValue JS_GetImportMeta(JSContext* ctx, JSModuleDef* m);
JSAtom JS_GetModuleName(JSContext *ctx, JSModuleDef *m);
typedef JSValue JSJobFunc(JSContext *ctx, int argc, JSValueConst *argv);
int JS_EnqueueJob(JSContext *ctx, JSJobFunc *job_func, int argc, JSValueConst *argv);
JS_BOOL JS_IsJobPending(JSRuntime *rt);
int JS_ExecutePendingJob(JSRuntime *rt, JSContext **pctx);
uint8_t* JS_WriteObject(JSContext* ctx, size_t* psize, JSValueConst obj, int flags);
uint8_t* JS_WriteObject2(JSContext* ctx, size_t* psize, JSValueConst obj, int flags, uint8_t*** psab_tab, size_t* psab_tab_len);
JSValue JS_ReadObject(JSContext* ctx, const uint8_t* buf, size_t buf_len, int flags);
JSValue JS_EvalFunction(JSContext* ctx, JSValue fun_obj);
int JS_ResolveModule(JSContext *ctx, JSValueConst obj);
JSAtom JS_GetScriptOrModuleName(JSContext* ctx, int n_stack_levels);
typedef enum JSCFunctionEnum { 
                               JS_CFUNC_generic,
                               JS_CFUNC_generic_magic,
                               JS_CFUNC_constructor,
                               JS_CFUNC_constructor_magic,
                               JS_CFUNC_constructor_or_func,
                               JS_CFUNC_constructor_or_func_magic,
                               JS_CFUNC_f_f,
                               JS_CFUNC_f_f_f,
                               JS_CFUNC_getter,
                               JS_CFUNC_setter,
                               JS_CFUNC_getter_magic,
                               JS_CFUNC_setter_magic,
                               JS_CFUNC_iterator_next,
} JSCFunctionEnum;
typedef union JSCFunctionType {
  JSCFunction* generic;
  JSValue (*generic_magic)(JSContext* ctx, JSValueConst this_val, int argc, JSValueConst* argv, int magic);
  JSCFunction* constructor;
  JSValue (*constructor_magic)(JSContext* ctx, JSValueConst new_target, int argc, JSValueConst* argv, int magic);
  JSCFunction* constructor_or_func;
  double (*f_f)(double);
  double (*f_f_f)(double, double);
  JSValue (*getter)(JSContext* ctx, JSValueConst this_val);
  JSValue (*setter)(JSContext* ctx, JSValueConst this_val, JSValueConst val);
  JSValue (*getter_magic)(JSContext* ctx, JSValueConst this_val, int magic);
  JSValue (*setter_magic)(JSContext* ctx, JSValueConst this_val, JSValueConst val, int magic);
  JSValue (*iterator_next)(JSContext* ctx, JSValueConst this_val, int argc, JSValueConst* argv, int* pdone, int magic);
} JSCFunctionType;
JSValue JS_NewCFunction2(JSContext* ctx, JSCFunction* func, const char* name, int length, JSCFunctionEnum cproto, int magic);
JSValue JS_NewCFunctionData(JSContext* ctx, JSCFunctionData* func, int length, int magic, int data_len, JSValueConst* data);
void JS_SetConstructor(JSContext* ctx, JSValueConst func_obj, JSValueConst proto);
typedef struct JSCFunctionListEntry {
  const char* name;
  uint8_t prop_flags;
  uint8_t def_type;
  int16_t magic;
  union {
    struct {
      uint8_t length; 
      uint8_t cproto; 
      JSCFunctionType cfunc;
    } func;
    struct {
      JSCFunctionType get;
      JSCFunctionType set;
    } getset;
    struct {
      const char* name;
      int base;
    } alias;
    struct {
      const struct JSCFunctionListEntry* tab;
      int len;
    } prop_list;
    const char* str;
    int32_t i32;
    int64_t i64;
    double f64;
  } u;
} JSCFunctionListEntry;